--- a/glazier-repo/version-info.yaml
+++ b/glazier-repo/version-info.yaml
@@ -1,3 +1,5 @@
 versions:
-  windows10-stable: 'stable'
-  windows10-dev: 'dev'
+  windows-stable: 'stable'
+  windows-blank: 'blank'
+  win10-stable: 'win10-stable'
+  win10-blank: 'win10-blank'
