--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ tools/autobuild.json
 /glazier/*
 /glazier-repo/*/config/mgmt-installer-amd64.exe
 /glazier-repo/*/config/unattend.xml
+/glazier-repo/sync.sh
