--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 tools/autobuild.json
 *.iso
 /glazier/*
-/glazier-repo/*/config/mgmt-installer-amd64.exe
+/glazier-repo/*/config/*/*.exe
 /glazier-repo/*/config/unattend.xml
 /glazier-repo/sync.sh
