update Cloud Build

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,9 +3,10 @@ substitutions:
   _SUBNETWORK: 'default'
   _REGION: 'europe-west1'
   _ZONE: 'europe-west1-d'
-  _IMAGE: 'windows-cloud/global/images/windows-server-2022-dc-core-v20220513'
+  _IMAGE: 'windows-cloud/global/images/windows-server-2022-dc-v20220513'
   _MACHINETYPE: 'e2-standard-4'
   _SERVICEACCOUNT: ''
+  _STORAGE_UPLOAD_PATH: ''
 steps:
 - name: 'gcr.io/$PROJECT_ID/windows-builder'
   args: [ '--network', '$_NETWORK',
@@ -16,5 +17,5 @@ steps:
           '--machineType', '$_MACHINETYPE',
           '--diskSizeGb', '150',
           '--serviceAccount', '$_SERVICEACCOUNT',
-          '--command', 'powershell.exe -File tools/bootstrap_winpe.ps1 -config_server $_CONFIG_SERVER' ]
+          '--command', 'powershell.exe -File tools/bootstrap_winpe.ps1 -config_server $_CONFIG_SERVER -storage_upload_path $_STORAGE_UPLOAD_PATH' ]
 timeout: 3600s
