--- a/glazier-repo/stable-enterprise/config/build.yaml
+++ b/glazier-repo/stable-enterprise/config/build.yaml
@@ -1,6 +1,6 @@
 templates:
   osdcloud:
-    PSCommand: ['Start-OSDCloud -Firmware -SkipAutopilot -SkipODT -ZTI -OSVersion "Windows 10" -OSBuild "21H2" -OSEdition "Pro" -OSLanguage "en-gb" -OSLicense "Retail"']
+    PSCommand: ['Start-OSDCloud -Firmware -SkipAutopilot -SkipODT -ZTI -OSVersion "Windows 11" -OSBuild "21H2" -OSEdition "Enterprise" -OSLanguage "en-gb" -OSLicense "Volume"']
 
 controls:
 - SetTimer: ['winpe_start']
@@ -39,6 +39,7 @@ controls:
   - ['MGMT/mgmt-installer-amd64.exe', 'C:\MGMT\mgmt-installer-amd64.exe']
   - ['Office365/officedeploymenttool_15128-20224.exe', 'C:\MGMT\Temp\odt_installer.exe']
   - ['Office365/config.xml', 'C:\MGMT\Temp\odt\a1-config.xml']
+
 
 #################################################################################################
 # Copy files from WinPE to the host for later use                                               #
