--- a/glazier-repo/win11-22h2/config/build.yaml
+++ b/glazier-repo/win11-22h2/config/build.yaml
@@ -1,6 +1,6 @@
 templates:
   osdcloud:
-    PSCommand: ['Start-OSDCloud -Firmware -SkipAutopilot -SkipODT -ZTI -OSVersion "Windows 10" -OSBuild "21H2" -OSEdition "Pro" -OSLanguage "en-gb" -OSLicense "Retail"']
+    PSCommand: ['Start-OSDCloud -Firmware -SkipAutopilot -SkipODT -ZTI -ImageFileUrl "https://storage.googleapis.com/a1comms-mgmt-deployment-files/Windows11_InsiderPreview_Client_x64_en-us_22621/sources/install.wim" -ImageIndex 6']
 
 controls:
 - SetTimer: ['winpe_start']
@@ -25,12 +25,6 @@ controls:
 - pull:
   - ['unattend.xml', 'C:\Windows\Panther\Invoke-OSDSpecialize.xml']
 
-- Execute: [
-  ['C:\Windows\System32\reg.exe load HKLM\TempSYSTEM C:\Windows\System32\Config\SYSTEM'],
-  ['C:\Windows\System32\reg.exe add HKLM\TempSYSTEM\Setup /v UnattendFile /d C:\Windows\Panther\Invoke-OSDSpecialize.xml /f'],
-  ['C:\Windows\System32\reg.exe unload HKLM\TempSYSTEM'],
-]
-
 - MkDir: ['C:\MGMT']
 - MkDir: ['C:\MGMT\Temp']
 - MkDir: ['C:\MGMT\Temp\odt']
@@ -39,6 +33,7 @@ controls:
   - ['MGMT/mgmt-installer-amd64.exe', 'C:\MGMT\mgmt-installer-amd64.exe']
   - ['Office365/officedeploymenttool_15128-20224.exe', 'C:\MGMT\Temp\odt_installer.exe']
   - ['Office365/config.xml', 'C:\MGMT\Temp\odt\a1-config.xml']
+
 
 #################################################################################################
 # Copy files from WinPE to the host for later use                                               #
