--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,7 @@ substitutions:
   _MACHINETYPE: 'e2-standard-4'
   _SERVICEACCOUNT: ''
   _STORAGE_UPLOAD_PATH: ''
+  _STORAGE_BOOT_UPLOAD_PATH: ''
 steps:
 - name: 'gcr.io/$PROJECT_ID/windows-builder'
   args: [ '--network', '$_NETWORK',
@@ -17,5 +18,5 @@ steps:
           '--machineType', '$_MACHINETYPE',
           '--diskSizeGb', '150',
           '--serviceAccount', '$_SERVICEACCOUNT',
-          '--command', 'powershell.exe -File tools/bootstrap_winpe.ps1 -config_server $_CONFIG_SERVER -storage_upload_path $_STORAGE_UPLOAD_PATH' ]
+          '--command', 'powershell.exe -File tools/bootstrap_winpe.ps1 -config_server $_CONFIG_SERVER -storage_upload_path $_STORAGE_UPLOAD_PATH -storage_boot_upload_path $_STORAGE_BOOT_UPLOAD_PATH' ]
 timeout: 3600s
